添加忽略列表

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,19 @@
 /build
 /debug
 local.properties
+*.apk
+*.ap_
+*.aab
+*.dex
+*.class
+bin/
+gen/
+out/
+build/
+proguard/
+.navigation/
+captures/
+*.jks
+*.keystore
+.externalNativeBuild
+google-services.json
