--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,37 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
+        mavenLocal()
         mavenCentral()
+        google()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.1.0-alpha01"
+    }
+}
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+allprojects {
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+        google()
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/groups/public/'
+            allowInsecureProtocol = true
+        }
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
+            allowInsecureProtocol = true
+        }
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/repositories/google'
+            allowInsecureProtocol = true
+        }
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin'
+            allowInsecureProtocol = true
+        }
+        maven { url "https://jitpack.io" }
     }
 }
 
