--- a/AliPay/build.gradle
+++ b/AliPay/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.library'
+    id 'com.github.dcendents.android-maven'
 }
+
+group = 'com.gitee.jidaofeng'
 
 android {
     compileSdk 30
