移除Maven构建(过时)

--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,7 @@ buildscript {
     }
     dependencies {
         // gradle
-        classpath "com.android.tools.build:gradle:4.2.0"
-        // maven 打包插件
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-
-
+        classpath "com.android.tools.build:gradle:7.1.0-alpha01"
     }
 }
 
