--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
     }
     dependencies {
         // gradle
-        classpath "com.android.tools.build:gradle:7.1.0-alpha01"
+        classpath "com.android.tools.build:gradle:4.2.0"
     }
 }
 
